change action atribute in form

--- a/src/components/Pokemon.astro
+++ b/src/components/Pokemon.astro
@@ -93,7 +93,7 @@ const pokemonDetails = await fetchDetails();
   special_defense={pokemonDetails.special_defense}
   speed={pokemonDetails.speed}
 > 
-<form method="POST" action="/pokeapi-v1" class="w-[80%] absolute top-[110px] md:relative md:top-10 md:w-full">
+<form method="POST" action="/netlify-demo-v1" class="w-[80%] absolute top-[110px] md:relative md:top-10 md:w-full">
   <label
     for="default-search"
     class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white"
